--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -629,7 +629,7 @@
     <span class="nav-text">Users</span>
   </a>
 
-  <a class="nav-link" href="#">
+  <a class="nav-link" href="{{ url_for('dashboard.admin_analytics') }}">
     <span class="nav-icon">📈</span>
     <span class="nav-text">Analytics</span>
   </a>
