Add user profile page and dynamic user sidebar

--- a/templates/admin_settings.html
+++ b/templates/admin_settings.html
@@ -530,7 +530,7 @@
   </a>
 
   <a class="nav-link" href="{{ url_for('dashboard.admin_analytics') }}">
-    <span cl2ass="nav-icon">📈</span>
+    <span class="nav-icon">📈</span>
     <span>Analytics</span>
   </a>
 
